--- a/index.html
+++ b/index.html
@@ -1,160 +1,203 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
+
 <body>
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
-      <h1 class="header__title header__title_position">Научиться учиться</h1>
-      <h2 class="header__subtitle header__subtitle_position">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">
+        Какие современные и эффективные подходы к обучению вы можете
+        использовать в своей жизни?
         <a class="header__link" href="#" target="_blank">Узнать &rarr;</a>
-      </h2>
-      <img class="header__main-illustration header__main-illustration_position" src="./images/header-image.png" alt="иллюстрация в шапке сайта">
-      <div class="header__square-pic header__square-pic_position"></div>
+      </p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="иллюстрация в шапке сайта" />
+      <div class="header__square-pic"></div>
     </header>
     <main>
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragrph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся в экзаменам и учим билеты.
-              Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге не дает нам раельного знания.
-              Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragrph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат.
-              Что с этим делать?</p>
-            <p class="two-columns__paragrph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
-              Эти же техники применяются на примере обучения в Практикуме.</p>
+            <p class="two-columns__paragrph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
+              сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит
+              пользы.
+            </p>
+            <p class="two-columns__paragrph">
+              <span class="two-columns__span-accent">Вывод:</span> учиться
+              тоже нужно уметь, но почему-то этому мало где учат. Что с этим
+              делать?
+            </p>
+            <p class="two-columns__paragrph">
+              Конкретные техники и упражнения помогают изменить подход к
+              обучению, сделать его эффективным и захватывающим. Эти же
+              техники применяются на примере обучения в Практикуме.
+            </p>
           </div>
         </div>
       </section>
       <section class="digits">
-        <h1 class="section-title">Цифры и факты</h1>
-        <h2 class="section-subtitle">Про учебу и мозг</h2>
-        <div class="table">
-          <div class="table__cell">
-          <h3 class="table__heading">86 миллиардов</h3>
-          <p class="table__text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">2,1 миллиарда</h3>
-            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учебу и мозг</p>
+        <ul class="table">
+          <li class="table__cell">
+            <p class="table__heading">86 миллиардов</p>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">2,1 миллиарда</p>
+            <p class="table__text">
+              Число нуждающихся в повышении квалификации
+            </p>
             <p class="table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">1000 терабайт</h3>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">1000 терабайт</p>
             <p class="table__text">Объём памяти человека</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">500 триллионов</h3>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">500 триллионов</p>
+            <p class="table__text">
+              Число ответственных за обучение нервных синапсов у взрослого
+              человека
+            </p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">420 миллионов</p>
+            <p class="table__text">
+              Число взрослых людей моложе 25 лет, не имеющих образования для
+              трудоустройства
+            </p>
             <p class="table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">17-20 лет</h3>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">17-20 лет</p>
             <p class="table__text">Пик обучаемости</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">1885 год</h3>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">1885 год</p>
             <p class="table__text">Открытие кривой забывания</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">1889 год</h3>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">1889 год</p>
             <p class="table__text">Открытие условного рефлекса</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
       <section class="feynman">
-        <h1 class="feynman__title">Метод Фейнмана</h1>
-        <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
-        <a class="feynman__link feynman__link_position" href="#" target="_blank">Подробнее &rarr;</a>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a class="feynman__link" href="#" target="_blank">Подробнее &rarr;</a>
       </section>
       <!-- ниже начинается секция kaufman. В данной секции повторно используются CSS классы из секции digits, добавляются классы с модификаторами (где это необходимо) -->
       <section class="kaufman">
-        <h1 class="section-title">Принципы обучения</h1>
-        <h2 class="section-subtitle">от Джоша Кауфмана</h2>
-        <div class="table">
-          <div class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">1</h3>
-          <p class="table__text">Выберите привлекательный объект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">2</h3>
-            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">3</h3>
-            <p class="table__text">Определите целево уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">4</h3>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading">1</p>
+            <p class="table__text">Выберите привлекательный объект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading">2</p>
+            <p class="table__text">
+              Сосредоточьтесь на каком-то одном навыке.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading">3</p>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading">4</p>
             <p class="table__text">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">5</h3>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading">5</p>
             <p class="table__text">Приготовьте всё неободимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">6</h3>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading">6</p>
             <p class="table__text">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">7</h3>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading">7</p>
             <p class="table__text">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">8</h3>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading">8</p>
             <p class="table__text">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">9</h3>
-            <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">10</h3>
-            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
-          </div>
-        </div>
-        <img class="kaufman__triangle kaufman__triangle_position" src="./images/kaufman-triangle.svg" alt="синий треугольник">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading">9</p>
+            <p class="table__text">
+              Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading">10</p>
+            <p class="table__text">
+              Уделяйте внимание количеству и скорости.
+            </p>
+          </li>
+        </ul>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <!-- ниже начинается footer -->
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author">&#xa9 Виктор Абанькин</p>
+          <p class="footer__author">&#xa9; Глеб</p>
         </div>
-        <div class="footer__column">
-          <h4 class="footer__column_header">О Практикуме</h4>
+        <nav class="footer__column">
+          <p class="footer__column-heading">О Практикуме</p>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="https://practicum.yandex.ru/" target="_blank">Главная</a></li>
-            <li><a class="footer__column-link" href="https://yandex.ru/support/praktikum/familiarity-with-service.html" target="_blank">Концепция</a></li>
-            <li><a class="footer__column-link" href="https://yandex.ru/support/praktikum/mentors.html" target="_blank">Наставники</a></li>
+            <li>
+              <a class="footer__column-link" href="https://practicum.yandex.ru/" target="_blank">Главная</a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="https://yandex.ru/support/praktikum/familiarity-with-service.html"
+                target="_blank">Концепция</a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="https://yandex.ru/support/praktikum/mentors.html"
+                target="_blank">Наставники</a>
+            </li>
           </ul>
-        </div>
-        <div class="footer__column">
-          <h4 class="footer__column_header">Соцсети</h4>
+        </nav>
+        <nav class="footer__column">
+          <p class="footer__column-heading">Соцсети</p>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="https://www.youtube.com/@YandexPracticum/videos" target="_blank"><img src="./images/youtube-icon.svg"
-              alt="лого YouTube" class="footer__social-icon" href="https://www.youtube.com/@YandexPracticum/videos" target="_blank">YouTube</a></li>
-            <li><a class="footer__column-link" href="https://vk.com/yandex.praktikum" target="_blank"><img src="./images/vk_color_white.svg" alt="лого ВКонтакте"
-              class="footer__social-icon" href="https://vk.com/yandex.praktikum" target="_blank">ВКонтакте</a></li>
-            <li><a class="footer__column-link" href="#" target="_blank"><img src="./images/tiktok-icon.svg" alt="лого TikTok" class="footer__social-icon" href="#"
-              target="_blank">TikTok</a></li>
+            <li>
+              <a class="footer__column-link" href="https://www.youtube.com/@YandexPracticum/videos" target="_blank"><img
+                  src="./images/youtube-icon.svg" alt="лого YouTube" class="footer__social-icon"
+                  href="https://www.youtube.com/@YandexPracticum/videos" target="_blank" />YouTube</a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="https://vk.com/yandex.praktikum" target="_blank"><img
+                  src="./images/vk_color_white.svg" alt="лого ВКонтакте" class="footer__social-icon"
+                  href="https://vk.com/yandex.praktikum" target="_blank" />ВКонтакте</a>
+            </li>
+            <li>
+              <a class="footer__column-link" href="#" target="_blank"><img src="./images/tiktok-icon.svg"
+                  alt="лого TikTok" class="footer__social-icon" href="#" target="_blank" />TikTok</a>
+            </li>
           </ul>
-        </div>
+        </nav>
       </div>
     </footer>
   </div>
 </body>
+
 </html>
