--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css" />
-  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -19,12 +19,12 @@
         использовать в своей жизни?
         <a class="header__link" href="#" target="_blank">Узнать &rarr;</a>
       </p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="иллюстрация в шапке сайта" />
+      <img class="header__main-illustration" src="./images/header-image.png" alt="иллюстрация в шапке сайта">
       <div class="header__square-pic"></div>
     </header>
     <main>
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragrph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
@@ -43,36 +43,36 @@
               техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
         <ul class="table">
           <li class="table__cell">
-            <p class="table__heading">86 миллиардов</p>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">2,1 миллиарда</p>
+            <h3 class="table__heading">2,1 миллиарда</h3>
             <p class="table__text">
               Число нуждающихся в повышении квалификации
             </p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">1000 терабайт</p>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">500 триллионов</p>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">
               Число ответственных за обучение нервных синапсов у взрослого
               человека
             </p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">420 миллионов</p>
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для
               трудоустройства
@@ -80,15 +80,15 @@
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">17-20 лет</p>
+            <h3 class="table__heading">17-20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">1885 год</p>
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">1889 год</p>
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
@@ -104,47 +104,47 @@
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading">1</p>
+            <h3 class="table__heading">1</h3>
             <p class="table__text">Выберите привлекательный объект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading">2</p>
+            <h3 class="table__heading">2</h3>
             <p class="table__text">
               Сосредоточьтесь на каком-то одном навыке.
             </p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading">3</p>
+            <h3 class="table__heading">3</h3>
             <p class="table__text">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading">4</p>
+            <h3 class="table__heading">4</h3>
             <p class="table__text">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading">5</p>
+            <h3 class="table__heading">5</h3>
             <p class="table__text">Приготовьте всё неободимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading">6</p>
+            <h3 class="table__heading">6</h3>
             <p class="table__text">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading">7</p>
+            <h3 class="table__heading">7</h3>
             <p class="table__text">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading">8</p>
+            <h3 class="table__heading">8</h3>
             <p class="table__text">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading">9</p>
+            <h3 class="table__heading">9</h3>
             <p class="table__text">
               Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <p class="table__heading">10</p>
+            <h3 class="table__heading">10</h3>
             <p class="table__text">
               Уделяйте внимание количеству и скорости.
             </p>
@@ -161,7 +161,7 @@
           <p class="footer__author">&#xa9; Глеб</p>
         </div>
         <nav class="footer__column">
-          <p class="footer__column-heading">О Практикуме</p>
+          <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
             <li>
               <a class="footer__column-link" href="https://practicum.yandex.ru/" target="_blank">Главная</a>
@@ -177,21 +177,19 @@
           </ul>
         </nav>
         <nav class="footer__column">
-          <p class="footer__column-heading">Соцсети</p>
+          <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li>
               <a class="footer__column-link" href="https://www.youtube.com/@YandexPracticum/videos" target="_blank"><img
-                  src="./images/youtube-icon.svg" alt="лого YouTube" class="footer__social-icon"
-                  href="https://www.youtube.com/@YandexPracticum/videos" target="_blank" />YouTube</a>
+                  src="./images/youtube-icon.svg" alt="лого YouTube" class="footer__social-icon">YouTube</a>
             </li>
             <li>
               <a class="footer__column-link" href="https://vk.com/yandex.praktikum" target="_blank"><img
-                  src="./images/vk_color_white.svg" alt="лого ВКонтакте" class="footer__social-icon"
-                  href="https://vk.com/yandex.praktikum" target="_blank" />ВКонтакте</a>
+                  src="./images/vk_color_white.svg" alt="лого ВКонтакте" class="footer__social-icon">ВКонтакте</a>
             </li>
             <li>
               <a class="footer__column-link" href="#" target="_blank"><img src="./images/tiktok-icon.svg"
-                  alt="лого TikTok" class="footer__social-icon" href="#" target="_blank" />TikTok</a>
+                  alt="лого TikTok" class="footer__social-icon">TikTok</a>
             </li>
           </ul>
         </nav>
