--- a/index.html
+++ b/index.html
@@ -117,45 +117,45 @@
         <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
-            <p class="cards__description">Число нейронов в мозге человека</p>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">2,1 миллиарда</h3>
-            <p class="cards__description">
+            <p class="table__text">
               Число нуждающихся в повышении квалификации
             </p>
-            <p class="cards__description">Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">1000 терабайт</h3>
-            <p class="cards__description">Объём памяти человека</p>
+            <p class="table__text">Объём памяти человека</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">500 триллионов</h3>
-            <p class="cards__description">
+            <p class="table__text">
               Число ответственных за обучение нервных синапсов у взрослого
               человека
             </p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
-            <p class="cards__description">
+            <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для
               трудоустройства
             </p>
-            <p class="cards__description">Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">17-20 лет</h3>
-            <p class="cards__description">Пик обучаемости</p>
+            <p class="table__text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">1885 год</h3>
-            <p class="cards__description">Открытие кривой забывания</p>
+            <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">1889 год</h3>
-            <p class="cards__description">Открытие условного рефлекса</p>
+            <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
@@ -170,7 +170,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="/images/khan-book.jpg" alt="обложка книги Салмана Хана">
-            <a class="khan__buy-link header__link link" href="#">Купить книгу &rarr;</a>
+            <a class="khan__buy-link link" href="#">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -180,47 +180,47 @@
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">1</h3>
-            <p class="cards__description">Выберите привлекательный объект.</p>
+            <p class="table__text">Выберите привлекательный объект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">2</h3>
-            <p class="cards__description">
+            <p class="table__text">
               Сосредоточьтесь на каком-то одном навыке.
             </p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">3</h3>
-            <p class="cards__description">Определите целевой уровень мастерства.</p>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">4</h3>
-            <p class="cards__description">Разбейте навык на элементы.</p>
+            <p class="table__text">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">5</h3>
-            <p class="cards__description">Приготовьте всё неободимое для занятий.</p>
+            <p class="table__text">Приготовьте всё неободимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">6</h3>
-            <p class="cards__description">Устраните препятствия для занятий.</p>
+            <p class="table__text">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">7</h3>
-            <p class="cards__description">Выделите специальное время для занятий.</p>
+            <p class="table__text">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">8</h3>
-            <p class="cards__description">Создайте быстрые петли обратной связи.</p>
+            <p class="table__text">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">9</h3>
-            <p class="cards__description">
+            <p class="table__text">
               Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">10</h3>
-            <p class="cards__description">
+            <p class="table__text">
               Уделяйте внимание количеству и скорости.
             </p>
           </li>
